# nl-power-pipeline

./: .gitignore  CLAUDE.md  pyproject.toml
ingest/: db.py  energy_charts.py  openmeteo.py
