[project]
name = "nl-power-pipeline"
version = "0.1.0"
description = "Local pipeline: Dutch weather + electricity prices/generation into DuckDB, visualized in Streamlit"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "tenacity>=8.2",
    "duckdb>=1.0",
    "streamlit>=1.36",
    "pandas>=2.2",
    "plotly>=5.22",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
